23 November 2021 Petasis George <petasis@iit.demokritos.gr>:
 * backend-django/clarin_backend/utils.py:
 * backend-django/clarin_backend/urls.py:
 * backend-django/clarin_backend/mongodb_views.py: Various fixes.

 * clarin-angular/src/app/components/views/annotation/annotation.component.html:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 Added support for link routers.

 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 Fixed link drawing.

 * clarin-angular/package.json: Updated Join.js to version 3.4.4.

15 November 2021 Petasis George <petasis@iit.demokritos.gr>, Anna Gradou <agradou@iit.demokritos.gr>, Alexandros Ntogramatzis <antogramatzis@iit.demokritos.gr>:
 * backend-django/clarin_backend/mongodb_views.py:
 * backend-django/clarin_backend/utils.py:
 * backend-django/clarin_backend/views.py: Various bug fixes in the new
 MongoDB controllers.

14 November 2021 Petasis George <petasis@iit.demokritos.gr>, Anna Gradou <agradou@iit.demokritos.gr>, Alexandros Ntogramatzis <antogramatzis@iit.demokritos.gr>:
 * backend-django/clarin_backend/mongodb_views.py:
 * backend-django/clarin_backend/utils.py:
 * backend-django/clarin_backend/urls.py: New implementation of MongoDB
 controllers.

 * clarin-angular/src/app/components/dialogs/import-documents-from-export-modal/:
 Dialog for importing exported Collections.

 * clarin-angular/src/css/clarin-material.scss:
 * clarin-angular/src/app/app-routing.module.ts:
 * clarin-angular/src/app/app.component.ts:
 * clarin-angular/src/app/components/views/analytics-annotation-values/: Added
 a new page, for Annotation Value analytics.

 * clarin-angular/src/assets/data/menu.json: Added a new section, for
 Analytics.

 * clarin-angular/src/app/components/controls/toolbar-select-annotator/:
 A toolbar for selecting an Annotator.

 * clarin-angular/src/app/ng-matero/routes/profile/:
 * clarin-angular/src/app/services/user-service/user.service.ts: Added support